Restored to 'bfec41111b50a4d1dae35e75b59347737bcb0c42'
Replit-Restored-To: bfec41111b50a4d1dae35e75b59347737bcb0c42

--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -5,11 +5,7 @@
     "home": "الرئيسية",
     "about": "عني",
     "projects": "المشاريع",
-    "contact": "تواصل",
-    "cta": {
-      "text": "هل أنت مستعد لبدء مشروع معاً؟",
-      "button": "تواصل معي"
-    }
+    "contact": "تواصل"
   },
   "hero": {
     "greeting": "أهلا، أنا",
