Restored to '1d9a464cbcfe499ba7a72237294ecbda2b61a688'
Replit-Restored-To: 1d9a464cbcfe499ba7a72237294ecbda2b61a688

--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -17,31 +17,8 @@
     "title": "من أنا",
     "subtitle": "مطور ويب متكامل و مصمم واجهات",
     "imageAlt": "يوسف يعمل",
-    "introduction": "مطور شغوف بنهج إبداعي لحل المشكلات",
     "paragraph1": "مرحباً، أنا يوسف، مطور ويب متكامل مع شغف كبير لبناء تجارب رقمية استثنائية. أمتلك خبرة واسعة في تطوير الواجهات الأمامية والخلفية، مع تركيز خاص على تقنيات JavaScript الحديثة والتصميم الإبداعي.",
-    "paragraph2": "تتضمن مهاراتي إنشاء واجهات تفاعلية سلسة باستخدام React و Next.js، وتطوير واجهات برمجة التطبيقات (APIs) قوية، وتصميم قواعد بيانات فعالة. أهتم بشكل كبير بتجربة المستخدم وأسعى دائماً لتحقيق التوازن المثالي بين الجمال والوظائف في كل مشروع.",
-    "paragraph3": "أحب استكشاف التقنيات والأطر الجديدة، وأسعى باستمرار لتحسين مهاراتي والبقاء في طليعة اتجاهات تطوير الويب. هدفي هو إنشاء تطبيقات لا تعمل بشكل مثالي فحسب، بل تقدم أيضًا تجارب مستخدم جذابة وبديهية.",
-    "bio": {
-      "title": "مسيرتي"
-    },
-    "education": {
-      "title": "التعليم",
-      "degree": "بكالوريوس علوم الحاسب",
-      "university": "جامعة الملك سعود",
-      "period": "٢٠١٥-٢٠١٩"
-    },
-    "skills": {
-      "title": "المهارات التقنية",
-      "frontend": "تطوير الواجهة الأمامية",
-      "backend": "تطوير الخلفية",
-      "tools": "الأدوات والتقنيات الأخرى"
-    },
-    "stats": {
-      "experience": "سنوات الخبرة",
-      "projects": "المشاريع",
-      "clients": "العملاء السعداء",
-      "satisfaction": "رضا العملاء"
-    }
+    "paragraph2": "تتضمن مهاراتي إنشاء واجهات تفاعلية سلسة باستخدام React و Next.js، وتطوير واجهات برمجة التطبيقات (APIs) قوية، وتصميم قواعد بيانات فعالة. أهتم بشكل كبير بتجربة المستخدم وأسعى دائماً لتحقيق التوازن المثالي بين الجمال والوظائف في كل مشروع."
   },
   "projects": {
     "title": "مشاريعي",
