--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -59,8 +59,8 @@
       "description": "موقع شركة عقارية متكامل مع قوائم العقارات ونموذج اتصال وصفحات محسنة لمحركات البحث."
     },
     "project3": {
-      "title": "مشروع IOU - عرض فنون NFT",
-      "description": "موقع إبداعي ومتحرك لمجموعة NFT، مع التركيز على سرد القصص وجماليات Web3."
+      "title": "مشروع IOU - عرض فنون ",
+      "description": "موقع إبداعي ومتحرك لمجموعة ، مع التركيز على سرد القصص وجماليات Web3."
     },
     "project4": {
       "title": "جاينت ويل - موقع معرض أعمال",
