--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -12,7 +12,7 @@
     "contact": "تواصل"
   },
   "hero": {
-    "greeting": "أهلا، أنا",
+    "greeting": " أنا",
     "description": "أبني تجارب رقمية جذابة وتطبيقات ويب متطورة تجمع بين الأداء العالي والتصميم الإبداعي.",
     "viewWork": "عرض أعمالي",
     "contact": "تواصل معي"
